[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "chainlit>=2.9.6",
    "deepagents>=0.3.8",
    "hephaestus",
    "langchain>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "livepopulartimes",
    "telethon>=1.42.0",
    "truthbrush",
    "uvicorn>=0.40.0",
    "yfinance",
]

[tool.uv.sources]
hephaestus = { path = "../hephaestus", editable = true }
livepopulartimes = { git = "https://github.com/GrocerCheck/LivePopularTimes.git" }
truthbrush = { git = "https://github.com/stanfordio/truthbrush.git" }
